--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "animate.css": "^4.1.1",
     "boxicons": "^2.0.9",
     "firebase": "^9.2.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
