actualización final, ev2

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,7 +1,7 @@
 {
-	"appId": "io.ionic.starter",
-	"appName": "proyecto-auto",
-	"webDir": "www",
-	"bundledWebRuntime": false,
-	"npmCliente": "npm"
+  "appId": "com.sebaarl.duocdriver",
+  "appName": "DuocDriver",
+  "webDir": "www",
+  "bundledWebRuntime": false,
+  "npmCliente": "npm"
 }
